SERVER-34142: Convert background index builds to foreground during oplog recovery.