src/mongo/db/repl/rs_rollback.cpp
@@ -728,7 +728,7 @@ void rollbackDropIndexes(OperationContext* opCtx,
         log() << "Creating index in rollback for collection: " << nss << ", UUID: " << uuid
               << ", index: " << indexName;
 
-        createIndexForApplyOps(opCtx, indexSpec, nss, {});
+        createIndexForApplyOps(opCtx, indexSpec, nss, {}, OplogApplication::Mode::kRecovering);
 
         LOG(1) << "Created index in rollback for collection: " << nss << ", UUID: " << uuid
                << ", index: " << indexName;
